Add toCopy Method for document resource